<package>
  <name>myrobot_proj</name>
  <version>2.2.3</version>
  <description>Catkin metapackage for the turtlebot_simulator stack</description>
  <maintainer email="psg@outlook.com">OSRF</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_simulator</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_simulator</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_simulator/issues</url>
  <author email="turtlebot@willowgarage.com">Willow</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>myrobot_gazebo</run_depend>


  <export>
    <metapackage/>
  </export>
</package>
